@@ -1314,6 +1314,7 @@ version 9.10.1 (2021-06-26)
     * Locks BouncyCastle dependency to version 1.68.
 
 version 9.11 (2021-07-02)
+    * Provides Curve.hashCode based on the JOSE curve name.
     * Adds PBKDF2.deriveKey check to ensure iteration count is greater than 0.
     * Makes com.github.stephenc.jcip:jcip-annotations:1.0-1 dependency
       optional.
